<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="310dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    android:backgroundTint="@color/purple_200"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/item_moment_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:height="50dp"
            android:background="@drawable/round_edittext"
            android:hint="@string/naslov"
            android:importantForAutofill="no"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:textAlignment="center"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/item_moment_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_moment_content"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_edittext"
            android:gravity="top"
            android:hint="@string/unesi_tekst"
            android:importantForAutofill="no"
            android:maxLines="50"
            android:padding="10dp"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_moment_title" />


        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_edittext"
            android:padding="10dp"
            android:text="@string/no_location_selected"
            android:textSize="50px"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_moment_content" />

        <TextView
            android:id="@+id/item_moment_date"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_edittext"
            android:padding="10dp"
            android:textSize="50px"
            app:layout_constraintStart_toEndOf="@id/tv_location"
            app:layout_constraintTop_toBottomOf="@id/item_moment_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>