<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.moment_new.NewMoment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <EditText
        android:id="@+id/et_naslov"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:height="50dp"
        android:inputType="text|textMultiLine|textCapSentences"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:hint="@string/naslov"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_unos"
        android:background="@drawable/round_edittext"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_unos"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/round_edittext"
        android:gravity="top"
        android:inputType="text|textMultiLine|textCapSentences"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:hint="@string/unesi_tekst"
        android:maxLines="50"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_naslov"
        android:importantForAutofill="no" />


    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/et_unos"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/no_location_selected"
        android:textSize="50px"
        android:background="@drawable/round_edittext"
        />

        <EditText
            android:id="@+id/et_date"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_edittext"
            android:padding="10dp"
            android:hint="Date"
            android:textSize="50px"
            app:layout_constraintStart_toEndOf="@id/tv_location"
            app:layout_constraintTop_toBottomOf="@id/et_unos" />

    <ImageView
        android:id="@+id/iv_slika"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="photo" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/iv_slika"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toEndOf="@id/btn_add"
        app:srcCompat="@drawable/ic_check_white_24dp"
        app:tint="@android:color/white"
        android:contentDescription="@string/finish" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/iv_slika"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/purple_500"
        app:srcCompat="@drawable/ic_add_white_24dp"
        app:tint="@android:color/white" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@id/btn_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/purple_500"
        app:srcCompat="@drawable/ic_image_add_white_24dp"
        app:tint="@android:color/white"
        android:visibility="invisible"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@id/btn_add_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/purple_500"
        app:srcCompat="@drawable/ic_location_on_white_24dp"
        app:tint="@android:color/white"
        android:visibility="invisible"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="TODO"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/iv_slika"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_add"
        android:backgroundTint="@color/exit_color"
        app:srcCompat="@drawable/ic_close_white_24dp"
        app:tint="@android:color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>